# discord-bot

./: .gitignore  README.md  Secrets.toml
melle-bot/: .gitignore  Cargo.toml  Secrets.toml  Shuttle.toml
melle-bot/src/: api.rs  commands.rs  config.rs  handlers.rs  main.rs  models.rs  string-builder.txt  utils.rs
