[package]
name = "melle-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
chrono = "0.4.38"
rand = "0.8.5"
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
riven = "2.49.0"
serde = "1.0.202"
serde_json = "1.0.117"
serenity = { version = "0.12.0", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
shuttle-runtime = "0.44.0"
shuttle-serenity = "0.44.0"
tokio = "1.26.0"
tracing = "0.1.37"
